--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "share-folder",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "API and CLI application to run a REST host for sharing files and folders.",
   "main": "lib/index.js",
   "bin": {
@@ -35,24 +35,29 @@
     "@types/express": "^4.11.1",
     "@types/fs-extra": "^5.0.2",
     "@types/ip": "0.0.31",
+    "@types/is-stream": "^1.1.0",
     "@types/lodash": "^4.14.108",
     "@types/mime-types": "^2.1.0",
     "@types/minimist": "^1.2.0",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.4",
     "@types/node": "^7.0.43",
-    "@types/sanitize-filename": "^1.1.28"
+    "@types/sanitize-filename": "^1.1.28",
+    "@types/table": "^4.0.5"
   },
   "dependencies": {
     "express": "^4.16.3",
     "fs-extra": "^6.0.1",
+    "header-case-normalizer": "^1.0.3",
     "ip": "^1.1.5",
+    "is-stream": "^1.1.0",
     "lodash": "^4.17.10",
     "mime-types": "^2.1.18",
     "minimist": "^1.2.0",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.17",
     "node-enumerable": "^3.9.0",
-    "sanitize-filename": "^1.6.1"
+    "sanitize-filename": "^1.6.1",
+    "table": "^4.0.3"
   }
 }
