--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "share-folder",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "API and CLI application to run a REST host for sharing files and folders.",
   "main": "lib/index.js",
   "bin": {
@@ -37,7 +37,9 @@
   },
   "homepage": "https://github.com/mkloubert/node-share-folder#readme",
   "devDependencies": {
+    "@types/express-useragent": "^0.2.21",
     "@types/fs-extra": "^5.0.2",
+    "@types/html-entities": "^1.2.16",
     "@types/ip": "0.0.31",
     "@types/is-stream": "^1.1.0",
     "@types/lodash": "^4.14.108",
@@ -52,8 +54,10 @@
   "dependencies": {
     "@types/express": "^4.11.1",
     "express": "^4.16.3",
+    "express-useragent": "^1.0.12",
     "fs-extra": "^6.0.1",
     "header-case-normalizer": "^1.0.3",
+    "html-entities": "^1.2.1",
     "ip": "^1.1.5",
     "is-stream": "^1.1.0",
     "lodash": "^4.17.10",
